--- a/index.css
+++ b/index.css
@@ -148,3 +148,122 @@
   background-color:rgb(12, 137, 85);
   
 }
+
+
+.text-container{
+  margin-top:50px;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+ 
+}
+.text-container h1{
+  color: rgb(15, 15, 15);
+  font-weight:bolder;
+  margin-bottom:10px;
+ 
+}
+.text-container p{
+ color:rgb(54, 53, 51)
+}
+.card-container{
+  width:100%;
+  height:200px;
+}
+.cards{
+  margin-left:80px;
+  margin-right:80px;
+  height:100%;
+  display:flex;
+  gap:10px;
+  justify-content: space-between;
+
+}
+
+.card{
+  height:100%;
+  width:250px;
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  border:0.1px solid rgb(209, 209, 209);
+  
+  border-bottom: none;
+  box-shadow:none ;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  padding: 9px;
+  
+}
+.card .image-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20%;
+  background-color: #ff4e4e;
+  height:50px;
+  width:50px;
+  border-radius: 50%;
+  margin-bottom:10px;
+}
+
+.card .headline{
+  color:rgb(33, 30, 30);
+  font-size: 15px;
+  margin-bottom:15px;
+}
+.card .notes{
+  font-size: 13px;
+  color:rgb(90, 100, 100);
+  font-weight: 500;
+  text-align: center;
+}
+
+.image-and-tips{
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+ 
+  gap:70px;
+}
+.image-and-tips{
+  margin-left: 80px;
+}
+
+.image-and-tips .light img{
+  height:500px;
+  width:500px;
+}
+.tips{
+  align-self: center;
+}
+
+.tips #head{
+  color:rgb(7, 224, 98)
+}
+.tips h1{
+  color:rgb(28, 28, 28)
+}
+.tips #second{
+  margin-bottom: 10px;
+}
+.tips #text{
+  width: 70%;
+  font-size: small;
+  color:rgb(155, 162, 168);
+  margin-bottom: 15px;
+  
+}
+.tips-container{
+  list-style: none;
+  line-height: 5px;
+}
+.tip{
+  display:flex;
+  align-items: center;
+  gap:10px;
+  font-size: 12px;
+}
