--- a/index.css
+++ b/index.css
@@ -312,3 +312,53 @@
   color:rgb(155, 162, 168);
 }
 
+.last{
+  width:100%;
+  height:250px;
+  display:flex;
+  flex-direction: column;
+  background-color: rgb(12, 16, 48);
+}
+
+.element-container{
+  margin-left: 70px;
+  margin-right:70px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height:170px;
+}
+.links{
+  display: flex;
+  flex-direction: row;
+  gap:15px;
+  margin-right: 70px;
+}
+.link{
+  list-style: none;
+}
+
+.socials p{
+  margin-left:30px ;
+  margin-bottom:5px ;
+  color:#f6f6ec;
+}
+
+.links .link{
+  height:40px;
+  width:40px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #f6f6ec;
+}
+.links .link:hover{
+  background-color:  rgb(12, 16, 48);
+}
+
+.copy{
+  color:white;
+  text-align: center;
+}
